# This file is part of string-utilities. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/string-utilities/master/COPYRIGHT. No part of string-utilities, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016 The developers of string-utilities. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/string-utilities/master/COPYRIGHT.

[package]
name = "string-utilities"
description = "string utility functions"
keywords = ["string", "utilities", "truncate", "functions"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/string-utilities/blob/master/README.md"
homepage = "https://github.com/lemonrock/string-utilities"
repository = "https://github.com/lemonrock/string-utilities.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"
